--- a/apps/fbn/src/app/app.component.html
+++ b/apps/fbn/src/app/app.component.html
@@ -1,18 +1,29 @@
 <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
-    </button>
-    <span>Image Recognition</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-        <mat-icon>share</mat-icon>
-    </button>
+  <button mat-icon-button aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>Image Recognition</span>
+  <span class="example-spacer"></span>
+  <!-- <button mat-icon-button aria-label="Example icon-button with heart icon">
+    <mat-icon>favorite</mat-icon>
+  </button>
+  <button mat-icon-button aria-label="Example icon-button with share icon">
+    <mat-icon>share</mat-icon>
+  </button> -->
 </mat-toolbar>
 <div class="wrapper">
-    <div class="container">
-        <h1>Image Recognition</h1>
-    </div>
+  <div class="container">
+    <h1>Image Recognition</h1>
+    <button
+      mat-raised-button
+      color="primary"
+      aria-label="Redo"
+      (click)="startStream()"
+    >
+    <mat-icon>refresh</mat-icon>
+    Reload Data
+  </button>
+  <pre>Total amount of data rows: {{ dataRows.length | json }}</pre>
+  <pre *ngFor="let data of dataRows; trackBy:identify">{{ data | json }}</pre>
+</div>
 </div>
