--- a/apps/fbn/src/app/app.component.html
+++ b/apps/fbn/src/app/app.component.html
@@ -16,8 +16,7 @@
     <br>
     <div id="video-container">
       <video #video width="100%" controls>
-        <!-- <source src="https://samplelib.com/lib/preview/mp4/sample-5s.mp4" type="video/mp4"> -->
-        <source src="http://localhost:3000/video/testvideo-001.mp4" type="video/mp4">
+        <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
       </video>
       <div id="video-overlay">
         <ng-container
