--- a/apps/fbn/src/app/app.component.scss
+++ b/apps/fbn/src/app/app.component.scss
@@ -4,7 +4,7 @@
 .container {
   margin-left: auto;
   margin-right: auto;
-  max-width: 768px;
+  max-width: 1280px;
   padding-bottom: 3rem;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -31,8 +31,24 @@
   width: 8rem;
   height: 6rem;
   border: 0.2rem solid blue;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+
+  &:hover {
+    background-color: rgba(white, 0.2);
+
+    & .object-data {
+      display: block;
+    }
+  }
 }
 
-.object-label {
-  
+.object-data {
+  display: none;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  left: -0.2rem;
+  padding: 0.2rem;
+  font-size: 0.8rem;
 }
