--- a/apps/imgrec-ui/src/app/app.component.html
+++ b/apps/imgrec-ui/src/app/app.component.html
@@ -1,32 +1,14 @@
 <mat-toolbar color="primary">
-    <button mat-icon-button aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>Image Recognition</span>
-    <span class="example-spacer"></span>
-    <!-- <button mat-icon-button aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button> -->
-  </mat-toolbar>
-  <div class="wrapper">
-    <div class="container">
-      <br>
-      <div id="img-container">
-        <!-- !!! IMG !!! -->
-        <img src="" alt="">
-        <div id="img-overlay">
-          <ng-container
-            *ngFor="let objectData of visualObjects"
-            [ngTemplateOutlet]="objectTemplate"
-            [ngTemplateOutletContext]="{
-              objectData,
-            }"
-          ></ng-container>
-        </div>
-      </div>
+  <button mat-icon-button aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>Image Recognition</span>
+  <span class="example-spacer"></span>
+</mat-toolbar>
+
+<div class="wrapper">
+  <div class="container">
+    <div class="action-bar">
       <br>
 
       <!-- UPLOAD -->
@@ -35,30 +17,60 @@
       <br>
       <br>
 
+      <!-- RESET -->
       <button
         mat-raised-button
         color="primary"
         aria-label="Redo"
+        (click)="reset()"
       >
         <mat-icon>refresh</mat-icon>
         Reset
       </button>
     </div>
-  </div>
-  
-  <ng-template #objectTemplate let-objectData="objectData">
-    <div
-      class="object-frame"
-      [style.left.px]="objectData.x"
-      [style.bottom.px]="objectData.y"
-      [style.border-color]="objectData.color"
-    >
-      <div class="object-label" [style.background-color]="objectData.color">
-        {{ objectData.label }}
-      </div>
-      <div class="object-data" [style.background-color]="objectData.color">
-        {{ objectData | json }}
+
+    <br>
+
+    <p class="message --error" *ngIf="errorHasNoPredictions$ | async">No detections available. Please try again or try another image.</p>
+
+    <br>
+
+    <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
+    <div id="img-container">
+      <!-- USER UPLOADED IMG -->
+      <img
+        *ngIf="imgUrl"
+        #userImage
+        [src]="imgUrl"
+        alt="your uploaded image"
+      >
+      <div id="img-overlay">
+        <ng-container
+          *ngFor="let objectData of visualObjects"
+          [ngTemplateOutlet]="objectTemplate"
+          [ngTemplateOutletContext]="{
+            objectData,
+          }"
+        ></ng-container>
       </div>
     </div>
-  </ng-template>
-  
+  </div>
+</div>
+
+<ng-template #objectTemplate let-objectData="objectData">
+  <div
+    class="object-frame"
+    [style.left.px]="objectData.left"
+    [style.bottom.px]="objectData.bottom"
+    [style.width.px]="objectData.width"
+    [style.height.px]="objectData.height"
+    [style.border-color]="objectData.color"
+  >
+    <div class="object-label" [style.background-color]="objectData.color">
+      {{ objectData.data.class_name }}
+    </div>
+    <div class="object-data" [style.background-color]="objectData.color">
+      {{ objectData | json }}
+    </div>
+  </div>
+</ng-template>
