--- a/apps/imgrec-ui/src/styles.scss
+++ b/apps/imgrec-ui/src/styles.scss
@@ -1,21 +1,46 @@
 /* You can add global styles to this file, and also import other style files */
 @use '@angular/material' as mat;
+@import '@angular/cdk/overlay-prebuilt.css';
 
 @include mat.core();
 
-$my-primary: mat.define-palette(mat.$indigo-palette, 500);
-$my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$fbn-primary: mat.define-palette(mat.$indigo-palette, 500);
+$fbn-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$fbn-warn: mat.define-palette(mat.$red-palette);
 
-$my-theme: mat.define-light-theme((
- color: (
-   primary: $my-primary,
-   accent: $my-accent,
- ),
- typography: mat.define-typography-config(),
- density: 0,
+$default-typography: mat.define-typography-config();
+
+/* DEFAULT THEME */
+$light-theme: mat.define-light-theme((
+  color: (
+    primary: $fbn-primary,
+    accent: $fbn-accent,
+    warn: $fbn-warn,
+  ),
+  typography: $default-typography,
 ));
 
-@include mat.all-component-themes($my-theme);
+/* DARK THEME */
+$dark-theme: mat.define-dark-theme((
+  color: (
+    primary: $fbn-primary,
+    accent: $fbn-accent,
+    warn: $fbn-warn,
+  ),
+));
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* GLOBAL INCLUDES */
+@include mat.typography-hierarchy($default-typography);
+@include mat.all-component-themes($light-theme);
+
+html, body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.dark-theme {
+  @include mat.all-component-colors($dark-theme);
+}
