--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -1,70 +1,91 @@
+.content {
+  height: 100%;
+}
+
 .wrapper {
-    width: 100%;
-  }
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1280px;
-    padding-bottom: 3rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    color: rgba(55, 65, 81, 1);
-    width: 100%;
-  }
-  
-  #img-container {
-    position: relative;
+  width: 100%;
+}
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1280px;
+  padding-bottom: 3rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  width: 100%;
+}
 
-    img {
-      /* max-width: 100%; */
-      width: 100%;
-      height: auto;
+.spacer {
+  flex: 1 1 auto;
+}
+
+.toggle-section {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  height: 60px;
+  
+  & .__togge-container {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    height: 60px;
+    padding: 0 1rem;
+  }
+}
+
+#img-container {
+  position: relative;
+  
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+#img-overlay {
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: calc(100% - 5rem);
+}
+
+.object-frame {
+  background-color: transparent;
+  position: absolute;
+  width: 8rem;
+  height: 6rem;
+  border: 0.2rem solid blue;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  
+  &:hover {
+    background-color: rgba(white, 0.2);
+    
+    & .object-data {
+      display: block;
     }
   }
-  
-  #img-overlay {
-    position: absolute;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: calc(100% - 5rem);
-  }
-  
-  .object-frame {
-    background-color: transparent;
-    position: absolute;
-    width: 8rem;
-    height: 6rem;
-    border: 0.2rem solid blue;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-  
-    &:hover {
-      background-color: rgba(white, 0.2);
-  
-      & .object-data {
-        display: block;
-      }
-    }
-  }
-  
-  .object-data {
-    display: none;
-    position: absolute;
-    top: 100%;
-    width: 100%;
-    left: -0.2rem;
-    padding: 0.2rem;
-    font-size: 0.8rem;
-  }
+}
 
-  .message {
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin-bottom: 1rem;
+.object-data {
+  display: none;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  left: -0.2rem;
+  padding: 0.2rem;
+  font-size: 0.8rem;
+}
 
-    &.--error {
-      color: red;
-    }
+.message {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+  
+  &.--error {
+    color: red;
   }
+}
