--- a/apps/imgrec-ui/src/app/app.component.html
+++ b/apps/imgrec-ui/src/app/app.component.html
@@ -3,59 +3,87 @@
     <button mat-icon-button aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
-    <span>Image Recognition</span>
+    <span class="title">Image Recognition</span>
+    
     <span class="spacer"></span>
-      <div class="flex-stretch"></div>
-      <section class="toggle-section">
-        <mat-icon>brightness_5</mat-icon>
-        <div class="__togge-container">
-          <mat-slide-toggle (change)="themeToggleChange($event)" color="primary" [checked]="true">
-          </mat-slide-toggle>
-        </div>
-        <mat-icon>bedtime</mat-icon>
-      </section>
+    <div class="flex-stretch"></div>
+
+    <!-- UPLOAD -->
+    <input #imgInput hidden="true" type="file" onclick="this.value=null" (change)="imgInputChange($event)" accept=".jpg"/>
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="imgInput.click()"
+    >
+      <mat-icon>upload</mat-icon> 
+      Upload Image
+    </button>
+
+    <!-- RESET -->
+    <button
+      mat-raised-button
+      color="transparent"
+      aria-label="Redo"
+      (click)="reset()"
+    >
+      <mat-icon>refresh</mat-icon>
+      Reset
+    </button>
+
+    <!-- HELP -->
+    <button
+      mat-raised-button
+      color="primary"
+    >
+      <mat-icon>help_outlined</mat-icon> 
+      Help
+    </button>
+
+    <!-- TOGGLE DARK MODE -->
+    <section class="toolbar-section">
+      <mat-icon>light_mode</mat-icon>
+      <div class="__togge-container">
+        <mat-slide-toggle
+          color="primary"
+          [checked]="themeToggleDarkTheme"
+          (change)="themeToggleChange($event)">
+        </mat-slide-toggle>
+      </div>
+      <mat-icon>bedtime</mat-icon>
+    </section>
   </mat-toolbar>
 
   <div class="wrapper">
     <div class="container">
-      <h1 class="mat-h1">test test test</h1>
-      <p class="mat-body">asdasdasdasd</p>
-      <div class="action-bar">
-        <br>
-
-        <!-- UPLOAD -->
-        <input #csvInput hidden="true" type="file" onclick="this.value=null" (change)="imgInputChange($event)" accept="image/*"/>
-        <button mat-flat-button color="primary" (click)="csvInput.click()">Upload Image (*.jpg)</button>
-        <br>
-        <br>
-
-        <!-- RESET -->
-        <button
-          mat-raised-button
-          color="primary"
-          aria-label="Redo"
-          (click)="reset()"
-        >
-          <mat-icon>refresh</mat-icon>
-          Reset
-        </button>
-      </div>
-
       <br>
 
-      <p class="message --error" *ngIf="errorHasNoPredictions$ | async">No detections available. Please try again or try another image.</p>
+      <p
+        *ngIf="errorHasNoPredictions$ | async"
+        @rowCollapseAnimation
+        class="mat-error"
+      >
+        No detections available. Please try again or try another image.
+      </p>
 
-      <br>
-
-      <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
       <div id="img-container">
+        <div
+          *ngIf="isLoading$ | async"
+          @rowCollapseAnimation
+          class="spinner-container"
+        >
+          <mat-spinner></mat-spinner>
+        </div>
+
         <!-- USER UPLOADED IMG -->
         <img
           *ngIf="imgUrl"
           #userImage
+          @rowCollapseAnimation
+          [class.--loading]="isLoading$ | async"
           [src]="imgUrl"
           alt="your uploaded image"
         >
+
         <div id="img-overlay">
           <ng-container
             *ngFor="let objectData of visualObjects"
@@ -72,6 +100,7 @@
   <ng-template #objectTemplate let-objectData="objectData">
     <div
       class="object-frame"
+      @rowCollapseAnimation
       [style.left.px]="objectData.left"
       [style.bottom.px]="objectData.bottom"
       [style.width.px]="objectData.width"
@@ -79,10 +108,10 @@
       [style.border-color]="objectData.color"
     >
       <div class="object-label" [style.background-color]="objectData.color">
-        {{ objectData.data.class_name }}
+        <b>{{ objectData.data.class_name }}</b>
       </div>
       <div class="object-data" [style.background-color]="objectData.color">
-        {{ objectData | json }}
+        <b>Confidence</b>: <span class="confidence">{{ objectData.data.confidence | json }}</span>
       </div>
     </div>
   </ng-template>
