--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -1,29 +1,38 @@
+/* OUTER */
+
 .content {
-  height: 100%;
+  min-height: 100%;
+  transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
 }
 
 .wrapper {
   width: 100%;
 }
+
 .container {
   margin-left: auto;
   margin-right: auto;
-  max-width: 1280px;
-  padding-bottom: 3rem;
+  max-width: calc(100% - 2rem);
   padding-left: 1rem;
   padding-right: 1rem;
-  width: 100%;
+}
+
+/* INNER */
+
+.title {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .spacer {
   flex: 1 1 auto;
 }
 
-.toggle-section {
+.toolbar-section {
   display: flex;
   align-content: center;
   align-items: center;
-  height: 60px;
+  margin-left: 2rem;
   
   & .__togge-container {
     display: flex;
@@ -36,10 +45,34 @@
 
 #img-container {
   position: relative;
+  width: 100%;
+  height: 90vh;
+
+  .spinner-container {
+    position: absolute;
+    background-color: rgba(white, 0.5);
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+  }
   
   img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain;
+    position: relative;
+    filter: blur(0);
+    transition: filter 0.1s ease-in-out;
+
+    &.--loading {
+      filter: blur(0.5rem);
+    }
   }
 }
 
@@ -58,25 +91,38 @@
   width: 8rem;
   height: 6rem;
   border: 0.2rem solid blue;
-  cursor: pointer;
   transition: background-color 0.2s ease-in-out;
+  
+  color: black;
   
   &:hover {
     background-color: rgba(white, 0.2);
     
     & .object-data {
-      display: block;
+      visibility: visible;
+      opacity: 1;
     }
+  }
+
+  & .confidence {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
 .object-data {
-  display: none;
   position: absolute;
   top: 100%;
   width: 100%;
   left: -0.2rem;
   padding: 0.2rem;
+
+  visibility: hidden;
+  opacity: 0;
+  transition: visible 0.2s ease-in-out, opacity 0.2s ease-in-out;
+
   font-size: 0.8rem;
 }
 
