--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -10,11 +10,27 @@
 }
 
 .container {
+  position: relative;
   margin-left: auto;
   margin-right: auto;
-  max-width: calc(100% - 2rem);
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.spinner-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  
+  background-color: rgba(white, 0.5);
+  z-index: 1;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 /* INNER */
@@ -47,20 +63,6 @@
   position: relative;
   width: 100%;
   height: 90vh;
-
-  .spinner-container {
-    position: absolute;
-    background-color: rgba(white, 0.5);
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-  }
   
   img {
     width: 100%;
