--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -6,13 +6,14 @@
 }
 
 .wrapper {
+  position: relative;
   width: 100%;
 }
 
 .container {
-  position: relative;
   margin-left: auto;
   margin-right: auto;
+  max-width: calc(100% - 2rem);
   padding-left: 1rem;
   padding-right: 1rem;
 }
@@ -69,12 +70,6 @@
     height: 100%;
     object-fit: contain;
     position: relative;
-    filter: blur(0);
-    transition: filter 0.1s ease-in-out;
-
-    &.--loading {
-      filter: blur(0.5rem);
-    }
   }
 }
 
