--- a/apps/imgrec-ui/src/styles.scss
+++ b/apps/imgrec-ui/src/styles.scss
@@ -37,6 +37,8 @@ html, body {
   height: 100%;
 }
 body {
+  width: 100%;
+  overflow-x: hidden;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
