--- a/apps/imgrec-ui/src/app/app.component.html
+++ b/apps/imgrec-ui/src/app/app.component.html
@@ -85,7 +85,11 @@
           alt="your uploaded image"
         >
 
-        <div id="img-overlay">
+        <div
+          id="img-overlay"
+          [style.width.px]="imageWidth"
+          [style.height.px]="imageHeight"
+        >
           <ng-container
             *ngFor="let objectData of visualObjects"
             [ngTemplateOutlet]="objectTemplate"
@@ -107,6 +111,7 @@
       [style.width.px]="objectData.width"
       [style.height.px]="objectData.height"
       [style.border-color]="objectData.color"
+      [style.opacity]="objectData.opacity"
     >
       <div class="object-label" [style.background-color]="objectData.color">
         <b>{{ objectData.data.class_name }}</b>
