--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import '../styles.scss';
+
 /* OUTER */
 
 .content {
@@ -60,7 +62,7 @@
   }
 }
 
-#img-container {
+.img-container {
   position: relative;
   width: 100%;
   height: 90vh;
@@ -73,7 +75,57 @@
   }
 }
 
-#img-overlay {
+.user-image-placeholder {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+
+  &:hover {
+    background-color: rgba(white, 0.05);
+
+    & .__icon, & .__label {
+      text-shadow: 0 0 3.5rem black;
+      opacity: 0.9;
+    }
+  }
+
+  & .__icon {
+    width: 10rem;
+    height: 10rem;
+    padding: 2rem;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 10rem;
+    font-weight: 600;
+    opacity: 0.35;
+    /* color: $fbn-primary-color; */
+    text-shadow: 0 0 2.5rem black;
+    background-clip: text;
+    transition: opacity 0.2s ease-in-out, text-shadow 0.2s ease-in-out;
+
+  }
+
+  & .__label {
+    margin-top: -1rem;
+    opacity: 0.35;
+    font-size: 1.5rem;
+    font-weight: 600;
+    /* color: $fbn-primary-color; */
+    text-shadow: 0 0 1rem black;
+    background-clip: text;
+    transition: opacity 0.2s ease-in-out, text-shadow 0.2s ease-in-out;
+  }
+}
+
+.img-overlay {
   position: absolute;
   z-index: 1;
   overflow: hidden;
@@ -133,6 +185,6 @@
   margin-bottom: 1rem;
   
   &.--error {
-    color: red;
+    color: $fbn-warn-color;
   }
 }
