--- a/apps/imgrec-ui/src/styles.scss
+++ b/apps/imgrec-ui/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@use 'sass:map';
 @use '@angular/material' as mat;
 @import '@angular/cdk/overlay-prebuilt.css';
 
@@ -7,6 +8,10 @@
 $fbn-primary: mat.define-palette(mat.$indigo-palette, 500);
 $fbn-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $fbn-warn: mat.define-palette(mat.$red-palette);
+
+$fbn-primary-color: mat.get-color-from-palette($fbn-primary, 400);
+$fbn-accent-color: mat.get-color-from-palette($fbn-accent, 400);
+$fbn-warn-color: mat.get-color-from-palette($fbn-warn, 400);
 
 $default-typography: mat.define-typography-config();
 
