refactor: add animation to placeholder

--- a/apps/imgrec-ui/src/app/app.component.html
+++ b/apps/imgrec-ui/src/app/app.component.html
@@ -96,6 +96,7 @@
           <!-- PLACEHOLDER -->
           <div
             *ngIf="!imgUrl" class="user-image-placeholder"
+            @rowCollapseAnimation
             (click)="imgInput.click()"
           >
             <mat-icon
