refactor: minor ux improvments

--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -143,6 +143,7 @@
   height: 6rem;
   border: 0.2rem solid blue;
   transition: background-color 0.2s ease-in-out;
+  box-shadow: 0 0 1.5rem rgba(black, 0.75), 0 0 1.5rem rgba(black, 0.75) inset;
   
   color: black;
   
