--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -1,5 +1,3 @@
-@import '../styles.scss';
-
 /* OUTER */
 
 .content {
@@ -106,7 +104,6 @@
     font-size: 10rem;
     font-weight: 600;
     opacity: 0.35;
-    /* color: $fbn-primary-color; */
     text-shadow: 0 0 2.5rem black;
     background-clip: text;
     transition: opacity 0.2s ease-in-out, text-shadow 0.2s ease-in-out;
@@ -118,7 +115,6 @@
     opacity: 0.35;
     font-size: 1.5rem;
     font-weight: 600;
-    /* color: $fbn-primary-color; */
     text-shadow: 0 0 1rem black;
     background-clip: text;
     transition: opacity 0.2s ease-in-out, text-shadow 0.2s ease-in-out;
@@ -142,6 +138,6 @@
   margin-bottom: 1rem;
   
   &.--error {
-    color: $fbn-warn-color;
+    color: var(--fbn-warn-color);
   }
 }
