--- a/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.html
+++ b/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.html
@@ -1,6 +1,5 @@
 <div
     *ngIf="objectData"
-    @rowCollapseAnimation
     class="object-frame"
     [style.left.px]="objectData.left"
     [style.bottom.px]="objectData.bottom"
@@ -8,11 +7,13 @@
     [style.height.px]="objectData.height"
     [style.border-color]="objectData.color"
     [style.opacity]="objectData.opacity"
+    @rowCollapseAnimation
 >
-    <div class="object-label" [style.background-color]="objectData.color">
+  <div class="__object-label" [style.background-color]="objectData.color">
     <b>{{ objectData.data.class_name }}</b>
-    </div>
-    <div class="object-data" [style.background-color]="objectData.color">
+  </div>
+
+  <div class="__object-data" [style.background-color]="objectData.color">
     <b>Confidence</b>: <span class="confidence">{{ objectData.data.confidence | json }}</span>
-    </div>
+  </div>
 </div>
