--- a/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.scss
+++ b/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.scss
@@ -4,40 +4,47 @@
   width: 8rem;
   height: 6rem;
   border: 0.2rem solid blue;
-  transition: background-color 0.2s ease-in-out;
+  transition:
+    background-color 0.2s ease-in-out,
+    box-shadow 0.2s ease-in-out;
   box-shadow: 0 0 1.5rem rgba(black, 0.75), 0 0 1.5rem rgba(black, 0.75) inset;
   
   color: black;
   
   &:hover {
-    background-color: rgba(white, 0.2);
     z-index: 1;
     opacity: 1;
+    box-shadow: 0 0 5rem rgba(black, 1);
     
-    & .object-data {
+    & .__object-data {
       visibility: visible;
       opacity: 1;
     }
   }
 
-  & .confidence {
+  & .__object-label {
+    position: absolute;
+    bottom: 100%;
     width: 100%;
+    left: -0.2rem;
+    padding: 0.2rem;
+    font-weight: bold;
+  }
+
+  & .__object-data {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    left: -0.2rem;
+    padding: 0.2rem;
+  
+    visibility: hidden;
+    opacity: 0;
+    transition: visible 0.2s ease-in-out, opacity 0.2s ease-in-out;
+  
+    font-size: 0.9rem;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
   }
-}
-
-.object-data {
-  position: absolute;
-  top: 100%;
-  width: 100%;
-  left: -0.2rem;
-  padding: 0.2rem;
-
-  visibility: hidden;
-  opacity: 0;
-  transition: visible 0.2s ease-in-out, opacity 0.2s ease-in-out;
-
-  font-size: 0.9rem;
 }
