feat: implement fbn-object-frame to render image section

--- a/apps/imgrec-ui/src/app/app.component.html
+++ b/apps/imgrec-ui/src/app/app.component.html
@@ -84,8 +84,7 @@
 
       <fbn-image-viewer
         [isLoading]="(isLoading$ | async) || true"
-        [imgUrl]="imgUrl"
-        [objectDetections]="(objectDetections$ | async) || []"
+        [config]="imageViewerConfig"
         (clickPlaceholder)="imgInput.click()"
       >
       </fbn-image-viewer>
