--- a/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.scss
+++ b/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.scss
@@ -1,26 +1,25 @@
-.object-frame {
-  background-color: transparent;
+.object-frame-container {
   position: absolute;
-  width: 8rem;
-  height: 6rem;
-  border: 0.2rem solid blue;
   transition:
-    background-color 0.2s ease-in-out,
-    box-shadow 0.2s ease-in-out;
-  box-shadow: 0 0 1.5rem rgba(black, 0.75), 0 0 1.5rem rgba(black, 0.75) inset;
-  
-  color: black;
-  
+    box-shadow 0.2s ease-in-out,
+    opacity 0.2s ease-in-out;
+  box-shadow: 0 0 1.5rem rgba(black, 1), 0 0 1.5rem rgba(black, 1) inset;
+
   &:hover {
     z-index: 1;
-    opacity: 1;
-    box-shadow: 0 0 5rem rgba(black, 1);
+    opacity: 1 !important;
+    box-shadow: 0 0 2.5rem rgba(black, 1), 0 0 0 rgba(black, 0) inset;
     
-    & .__object-data {
+    & .__object-data, & .__object-canvas {
       visibility: visible;
       opacity: 1;
     }
   }
+}
+
+.object-frame {
+  background-color: transparent;
+  box-shadow: 0 0 0 0.2rem;
 
   & .__object-label {
     position: absolute;
@@ -29,6 +28,14 @@
     left: -0.2rem;
     padding: 0.2rem;
     font-weight: bold;
+    color: black;
+  }
+
+  & .__object-canvas {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
   }
 
   & .__object-data {
@@ -42,6 +49,7 @@
     opacity: 0;
     transition: visible 0.2s ease-in-out, opacity 0.2s ease-in-out;
   
+    color: black;
     font-size: 0.9rem;
     white-space: nowrap;
     overflow: hidden;
