--- a/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.scss
+++ b/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.scss
@@ -1,18 +1,20 @@
 .object-frame-container {
   position: absolute;
-  transition:
-    box-shadow 0.2s ease-in-out,
-    opacity 0.2s ease-in-out;
-  box-shadow: 0 0 1.5rem rgba(black, 1), 0 0 1.5rem rgba(black, 1) inset;
+  transition: box-shadow 0.2s ease-in-out;
+  box-shadow: 0 0 1.5rem rgba(black, 1);
 
   &:hover {
     z-index: 1;
     opacity: 1 !important;
-    box-shadow: 0 0 2.5rem rgba(black, 1), 0 0 0 rgba(black, 0) inset;
+    box-shadow: 0 0 2.5rem rgba(black, 1);
     
-    & .__object-data, & .__object-canvas {
+    & .__object-data {
       visibility: visible;
       opacity: 1;
+    }
+    & .__object-canvas {
+      opacity: 1;
+      transition-delay: 0s;
     }
   }
 }
@@ -35,7 +37,8 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    transition: opacity 0.2s ease-in-out;
+    transition: opacity 0.1s;
+    transition-delay: 0.1s;
   }
 
   & .__object-data {
@@ -47,7 +50,7 @@
   
     visibility: hidden;
     opacity: 0;
-    transition: visible 0.2s ease-in-out, opacity 0.2s ease-in-out;
+    transition: visibility 0.2s ease-in-out, opacity 0.2s ease-in-out;
   
     color: black;
     font-size: 0.9rem;
