--- a/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.scss
+++ b/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.scss
@@ -1,3 +1,25 @@
+.inner-overlay {
+  position: absolute;
+  z-index: 2;
+  overflow: hidden;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(black, 0.5);
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.2s ease-in-out, background-color 0.2s ease-in-out;
+
+  &.--active {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
 .object-frame-container {
   position: absolute;
   transition:
@@ -5,22 +27,30 @@
   box-shadow: 0 0 1.5rem rgba(black, 1);
 
   &.--enlarged {
-    z-index: 2;
+    z-index: 3;
     opacity: 1 !important;
-  }
+    box-shadow: 0 0 5rem rgba(black, 1);
 
-  &:hover {
-    z-index: 1;
-    opacity: 1 !important;
-    box-shadow: 0 0 2.5rem rgba(black, 1);
-    
     & .__object-data {
       visibility: visible;
       opacity: 1;
     }
-    & .__object-canvas {
-      opacity: 1;
-      transition-delay: 0s;
+  }
+
+  &:hover {
+    &:not(.--enlarged) {
+      z-index: 1;
+      opacity: 1 !important;
+      box-shadow: 0 0 2.5rem rgba(black, 1);
+      
+      & .__object-data {
+        visibility: visible;
+        opacity: 1;
+      }
+      & .__object-canvas {
+        opacity: 1;
+        transition-delay: 0s;
+      }
     }
   }
 }
