refactor: clean up

--- a/apps/imgrec-ui/src/app/components/image-viewer/image-viewer.component.html
+++ b/apps/imgrec-ui/src/app/components/image-viewer/image-viewer.component.html
@@ -39,7 +39,7 @@
       [computedImageHeight]="config?.computedImageHeight"
       (mouseover)="objectFrameIsHovered = true"
       (mouseleave)="objectFrameIsHovered = false"
-      (click)="enlarge(objectData)"
+      (click)="toggleEnlarge(objectData)"
     >
     </fbn-object-frame>
   </div>
