--- a/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.scss
+++ b/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.scss
@@ -12,7 +12,7 @@
   background-color: rgba(black, 0.5);
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0.2s ease-in-out, background-color 0.2s ease-in-out;
+  transition: visibility 0.2s ease-in-out, opacity 0.2s ease-in-out;
 
   &.--active {
     visibility: visible;
@@ -42,6 +42,7 @@
       z-index: 1;
       opacity: 1 !important;
       box-shadow: 0 0 2.5rem rgba(black, 1);
+      cursor: pointer;
       
       & .__object-data {
         visibility: visible;
