feat: WIP: implement object detections visualization in video

--- a/apps/imgrec-ui/src/app/components/video-viewer/video-viewer.component.html
+++ b/apps/imgrec-ui/src/app/components/video-viewer/video-viewer.component.html
@@ -4,15 +4,15 @@
 >
 
   <!-- USER UPLOADED VIDEO -->
+  <!-- loop -->
   <video
     *ngIf="config?.videoUrl"
     #userVideo
     [hidden]="isLoading"
-    [muted]="true"
-    autoplay
-    loop
     width="100%"
     controls
+    [muted]="true"
+    autoplay
   >
     <source [src]="config?.videoUrl" type="video/mp4">
   </video>
