--- a/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.scss
+++ b/apps/imgrec-ui/src/app/components/object-frame/object-frame.component.scss
@@ -22,8 +22,7 @@
 
 .object-frame-container {
   position: absolute;
-  transition:
-    box-shadow 0.2s ease-in-out;
+  transition: box-shadow 0.2s ease-in-out;
   box-shadow: 0 0 1.5rem rgba(black, 1);
 
   &.--enlarged {
